# serverless-mail

./: .gitignore  README.md
email-security-records/: CONFIG.py  LICENSE  README.md  app.py  requirements.txt
email-security-records/assets/: bimi_vmc.pem
email-security-records/diagrams/: architecture.drawio
email-security-records/email_security/: aspects.py  email_security_stack.py
idc_okta-workmail/: README.md  app-blank.py  app.py  cdk.json  get-my-variables.py  get_variables.py  my-variables.py  pyproject.toml  requirements.txt
idc_okta-workmail/OktaIdCWorkMailLambdaExample/: stack.py
idc_okta-workmail/OktaIdCWorkMailLambdaExample/lambda/: main.py  requirements.txt
idc_okta-workmail/src/: stack.py
idc_okta-workmail/src/IdCWorMailUserSyncrhonization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
idc_okta-workmail/src/lambda_code/: main.py  requirements.txt
idc_okta-workmail/tests/unit/: test_get_differences.py
lambda-email-parser/: README.md  lambda_function.py  lambda_function_dmarc.py  lamda_function_dmarc.py
serverless-iot-email-attachment-processing/: .gitignore  LICENSE  README.md  app.py  buildspec.yml  requirements-dev.txt  stack.py
serverless-iot-email-attachment-processing/doc/: architecture.drawio
ses-credential-rotation/: README.md  sesautomaticrotation.yaml  sesmanualrotation.yaml
smime-signature-validator/: Dockerfile  README.md  cpanfile  handler.pl  set_environment.pl
vdm-to-quicksight/: README.md
vdm-to-rds/: README.md  importLatestVDM.py  metricstoMySQL.py  sesvdmdb.sql
(+34 files in other folders)
