[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["lambda"]

# required for compatibility with black:
profile = "black"

# To maintain consistency with other settings
line_length = 100

[tool.mypy]
# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.

# Enables the type-checker on the interior of functions without type annotations.
check_untyped_defs = true

# Displaying specific error codes makes it easier to silence specific errors
# See also https://mypy.readthedocs.io/en/latest/error_codes.html
show_error_codes = true

# Show source code snippets and location markers in error messages
pretty = true

# Suppresses errors about packages which do not implement type-hint sharing.
# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true

[project]
name = "IdCWorMailUserSyncrhonization"
readme = "README.md"
version = "1.0"
dependencies = [
    "aws-cdk-lib>=2.38.0",
    "botocore>=1.36.2"
]